[package]
name = "ali-nls-drive"
version = "0.1.2"
edition = "2021"
description="ali-nls' drive by havy websocket client :3"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html




[dependencies]
tokio-tungstenite = { version = "0.18.0", features = ["rustls-tls-native-roots"]}
futures-channel = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }

thiserror = "1.0.38"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
bytes = "1"
rust-crypto = "0.2.36"
base64 = "0.21.0"
