[package]
name = "ali-nls-sr"
version = "0.1.2"
edition = "2021"
description="Easy ali-nls functional api for fe"
license = "MIT OR Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ali-nls-drive = { version = "0.1" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.0"
dotenv = "0.15.0"
log = "0.4"

[dependencies.uuid]
version = "1.3.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]